ecmascript/parser/tests/test262-error-references/fail/c0ad1c20e662c8ed.js.stderr
error: Unexpected eof
 --> $DIR/tests/test262-parser/fail/c0ad1c20e662c8ed.js:1:14
  |
1 | obj = {x = 0}
  |              ^

error: Unexpected token
 --> $DIR/tests/test262-parser/fail/c0ad1c20e662c8ed.js:1:8
  |
1 | obj = {x = 0}
  |        ^^^^^

